* fixed style for boot window on ios

--- a/ui/apps/themes/style.less
+++ b/ui/apps/themes/style.less
@@ -2777,11 +2777,11 @@ input.flat-input {
         width: auto;
         height: auto;
         margin: 0;
-        padding: 5px;
+        padding: 10px;
         background-color: white;
-        top: 10px;
-        left: 10px;
-        right: 10px;
+        top: 12px;
+        left: 12px;
+        right: 12px;
         z-index: 10000;
         .box-shadow(0 0 20px -2px #888);
         .border-radius(4px);
@@ -2790,7 +2790,7 @@ input.flat-input {
             height: auto;
             padding-bottom: 10px;
             h3 {
-                font-size: 19px;
+                font-size: 18px;
                 line-height: 34px;
                 margin-top: 0;
             }
